--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
 		"@angular/platform-browser": "^14.1.0",
 		"@angular/platform-browser-dynamic": "^14.1.0",
 		"@angular/router": "^14.1.0",
+        "@angular-material-components/datetime-picker": "^8.0.0",
+
 		"ngx-papaparse": "^5.1.0",
 		"rxjs": "~7.5.0",
 		"tslib": "^2.3.0",
