--- a/proxy/package.json
+++ b/proxy/package.json
@@ -4,9 +4,9 @@
 	"scripts": {},
 	"private": true,
 	"dependencies": {
-    "axios": "^1.6.5",
+		"axios": "^1.6.5",
 		"cors": "^2.8.5",
-		"express": "^4.18.2"
-	},
-	"devDependencies": { }
+		"express": "^4.18.2",
+		"get-stream": "^8.0.1"
+	}
 }
